--- a/diff_survey.tex
+++ b/diff_survey.tex
@@ -101,9 +101,16 @@ However, each study surveyed has only been able to discover significances
 for a subset of these traits, and our understandings of specific traits'
 effects varies significanly.
 
-Fifty seven visualization papers have been surveyed, and thirteen of these
+Fifty seven visualization papers have been surveyed, and twelve of these
 papers have been found to directly examine the relationship between visual
-analytics interactions and the individual traits enumerated above. 
+analytics interactions and the individual traits enumerated above. These
+twelve papers, and the traits that they assessed, are shown in Figure \ref{fig}
+\begin{figure*}[htbp]
+    \centerline{\includegraphics[height=25em]{fig1.png}}
+    \caption{Heatmap of individual differences-visualization papers and the traits
+    they found significant.}
+    \label{fig}
+\end{figure*}
 
 \subsection{Visual Analytics Interactions}
 It is worth noting that an interaction with a visualization is not well defined. As
@@ -298,10 +305,8 @@ personality traits and visual analytic performance, but also for its presentatio
 design choices. For example, the discovered rules included specific font choices such as Verdana
 vs Arial, and high vs low information density. These findings present evidence that
 specific, concrete design choices can be made based on the personality profiles of users,
-to increase user satisfaction. This idea is also supported by a study by Saati et al, which
-found that preferences towards color themes of a UI were correlated with levels of
-extraversion. Introverts tended to prefer cooler, more temperate colors such as blue\cite{Saati}.
-Brown et al's 2014 study also found that extraversion levels could be predicted from the task
+to increase user satisfaction. Brown et al's 2014 study also found that extraversion levels
+could be predicted from the task
 encodings, which suggests that different encodings which interact with extraversion could
 be worthwhile to explore further\cite{Waldo}. Amongst the big five personality traits,
 extraversion seems the most well studied. However, its research faces similar challenges to
@@ -318,7 +323,8 @@ novel encodings of interaction\cite{Waldo}, and have been the basis for the crea
 personalized design rules\cite{SarsamFirstLook}. Ziemkiewicz's examination of layout with
 respect to containment metaphors found that high levels of neuroticism were correlated with
 better task performance on the layouts with most and least explicit containment metaphors
-\cite{Ziemkiewicz}.
+\cite{Ziemkiewicz}. Our understanding of the effects of neuroticism is at a similar state
+to our understanding of extraversion 
 %problematic- visualization studied do not put participants in situations where they are
 % more likely to experience negative emotions, because of ethical concerns
 
@@ -329,8 +335,9 @@ academic performance \cite{ImhofSpaet2013pv}. As such, it may be intuitive to hy
 that similar effects to those of the cognitive abilities mentioned above would be consistently
 observed, since most visualization studies have studied conscientiousness with question
 accuracy as the metric to capture interaction. However, these effects have not been observed.
-While its effects have been examined with respect to extraversion \cite{SarsamFirstLook},
-it has not shown substantial, isolated significance. As such, 
+While its effects have been examined with respect to extraversion \cite{SarsamFirstLook} to
+discover concrete design choices, it has not shown substantial, isolated significance.
+Nonetheless,  
 
 
 \subsection{Agreeableness}\label{Agreeableness}
@@ -346,6 +353,8 @@ design studies that examine more intuitively relevant tasks. For example, if a v
 portrayed two conflicting beliefs sympathetically, and evaluated participant preferences
 towards each belief, would a person with high measures of agreeableness exhibit a marked
 openness towards both?
+
+\section{Conclusion}
 %conjecture, speculative future directions
 % Agreeableness
 % - Could not find significant results
