--- a/refs.bib
+++ b/refs.bib
@@ -141,11 +141,23 @@ eprint = {https://doi.org/10.1177/2158244018769125},
 abstract = {Personalization of the user interface (UI) to certain individuals’ characteristics is crucial for ensuring satisfaction with the service. Unfortunately, the attention in most UI personalization methods have been shifted from being behavioral-personalization to self-personalization. Practically, we explored the potential of linking users’ personality dimensions with their design preferences to shape the design of an interface. It is assumed that such design may effectively promote users’ satisfaction with the service. A total of 87 participants were used to design the UI for certain personality types, and 50 students were used to evaluate their satisfaction with the UI. The results that UI designed based on the users’ personality characteristics helped to stimulate their satisfaction in a mobile learning context. This study offers a new way for customizing the design of the interface based on the correlational link between individuals’ preferences and the structure of personality characteristics. }
 }
 
-
-
-
 @inproceedings{Saati,
   title={Towards customized user interface skins: investigating user personality and skin colour},
   author={Batul Saati and May Salem and Willem-Paul Brinkman and Middlesex Ub},
   year={2005}
+}
+
+@article{HealthNews,
+author = {Sara J. Weston and Joshua J. Jackson},
+title = {How do people respond to health news? The role of personality traits},
+journal = {Psychology \& Health},
+volume = {31},
+number = {6},
+pages = {637-654},
+year  = {2016},
+publisher = {Routledge},
+doi = {10.1080/08870446.2015.1119274},
+note ={PMID: 26609555},
+URL = {https://doi.org/10.1080/08870446.2015.1119274},
+eprint = {https://doi.org/10.1080/08870446.2015.1119274}
 }
