--- a/diff_survey.tex
+++ b/diff_survey.tex
@@ -106,7 +106,7 @@ papers have been found to directly examine the relationship between visual
 analytics interactions and the individual traits enumerated above. These
 twelve papers, and the traits that they assessed, are shown in Figure \ref{fig}
 \begin{figure*}[htbp]
-    \centerline{\includegraphics[height=25em]{fig1.png}}
+    \centerline{\includegraphics[height=24em]{fig1.png}}
     \caption{Heatmap of individual differences-visualization papers and the traits
     they found significant.}
     \label{fig}
@@ -323,10 +323,10 @@ novel encodings of interaction\cite{Waldo}, and have been the basis for the crea
 personalized design rules\cite{SarsamFirstLook}. Ziemkiewicz's examination of layout with
 respect to containment metaphors found that high levels of neuroticism were correlated with
 better task performance on the layouts with most and least explicit containment metaphors
-\cite{Ziemkiewicz}. Our understanding of the effects of neuroticism is at a similar state
-to our understanding of extraversion 
-%problematic- visualization studied do not put participants in situations where they are
-% more likely to experience negative emotions, because of ethical concerns
+\cite{Ziemkiewicz}. Our understandings neuroticism and extraversion are at similar states
+in terms of the amount of conclusions that have been reached and the diversity of interaction
+contexts assessed, so we can expect a similar future progression.
+%visualization studied do not put participants in situations where they are more likely to experience negative emotions, for obvious ethical concerns
 
 \subsection{Conscientiousness}\label{Conscientiousness}
 Conscientiousness which is characterized by carefulness, diligence and discipline, has generally
