finish first draft

--- a/diff_survey.tex
+++ b/diff_survey.tex
@@ -336,9 +336,9 @@ that similar effects to those of the cognitive abilities mentioned above would b
 observed, since most visualization studies have studied conscientiousness with question
 accuracy as the metric to capture interaction. However, these effects have not been observed.
 While its effects have been examined with respect to extraversion \cite{SarsamFirstLook} to
-discover concrete design choices, it has not shown substantial, isolated significance.
-Nonetheless,  
-
+discover concrete design choices, it has not shown substantial, isolated significance. It
+therefore may be productive to assess conscientiousness in isolation, to decorrelate its
+effects from those of other traits.
 
 \subsection{Agreeableness}\label{Agreeableness}
 Our understanding of the effects agreeableness, which is associated with kindness and modesty,
@@ -354,12 +354,13 @@ portrayed two conflicting beliefs sympathetically, and evaluated participant pre
 towards each belief, would a person with high measures of agreeableness exhibit a marked
 openness towards both?
 
-\section{Conclusion}
-%conjecture, speculative future directions
-% Agreeableness
-% - Could not find significant results
-% - Most tasks shown do not have an intuitive connection to agreeableness;
-% therefore this absence of significance makes sense
+\section{Conclusions}
+This survey is meant to reflect the current state of visualization research with respect
+to individual traits. While the results observed from these traits vary significantly, there
+are many avenues of future research available for each one such that we explore them with
+respect to a robust evaluation of different interactions and visualizations.
+
+\pagebreak
 \bibliographystyle{ieee}
 \bibliography{refs}
 \vspace{12pt}
